lab/r1/root/firewall.conf
# Generated by iptables-save v1.4.1.1 on Sat Aug 24 22:22:44 2013
*raw
:PREROUTING ACCEPT [3246:396766]
:OUTPUT ACCEPT [2766:195651]
COMMIT
# Completed on Sat Aug 24 22:22:44 2013
# Generated by iptables-save v1.4.1.1 on Sat Aug 24 22:22:44 2013
*nat
:PREROUTING ACCEPT [136:13602]
:POSTROUTING ACCEPT [14:1096]
:OUTPUT ACCEPT [46:3221]
-A PREROUTING -d 1.1.255.13/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.0.1.2:80 
-A PREROUTING -d 1.1.255.13/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.0.1.2:443 
-A PREROUTING -d 1.1.255.13/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.0.1.2:53 
-A PREROUTING -d 1.1.255.13/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.0.1.2:53 
-A POSTROUTING -o eth4 -j MASQUERADE 
-A POSTROUTING -o eth5 -j MASQUERADE 
COMMIT
# Completed on Sat Aug 24 22:22:44 2013
# Generated by iptables-save v1.4.1.1 on Sat Aug 24 22:22:44 2013
*mangle
:PREROUTING ACCEPT [3246:396766]
:INPUT ACCEPT [2828:261394]
:FORWARD ACCEPT [385:133003]
:OUTPUT ACCEPT [2766:195651]
:POSTROUTING ACCEPT [3104:325779]
COMMIT
# Completed on Sat Aug 24 22:22:44 2013
# Generated by iptables-save v1.4.1.1 on Sat Aug 24 22:22:44 2013
*filter
:INPUT DROP [62:4474]
:FORWARD DROP [27:1643]
:OUTPUT ACCEPT [2766:195651]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A FORWARD -d 1.0.0.0/24 -p tcp -m multiport --dports 80,21,22,53 -j ACCEPT 
-A FORWARD -s 1.0.0.0/24 -m state --state ESTABLISHED -j ACCEPT 
-A FORWARD -d 1.0.0.0/24 -p icmp -j ACCEPT 
-A FORWARD -i eth4 -o eth3 -j ACCEPT 
-A FORWARD -i eth4 -o eth2 -j ACCEPT 
-A FORWARD -i eth4 -o eth1 -j ACCEPT 
-A FORWARD -i eth2 -o eth1 -j ACCEPT 
-A FORWARD -i eth3 -o eth1 -j ACCEPT 
-A FORWARD -i eth1 -o eth2 -j ACCEPT 
-A FORWARD -i eth3 -o eth2 -j ACCEPT 
-A FORWARD -i eth1 -o eth3 -j ACCEPT 
-A FORWARD -i eth2 -o eth3 -j ACCEPT 
-A FORWARD -i eth4 -o eth0 -j ACCEPT 
-A FORWARD -o eth4 -j ACCEPT 
COMMIT
# Completed on Sat Aug 24 22:22:44 2013
